# zentracker

./: .gitignore  AGENTS.md  HANDOFF.md  LICENSE  README.md  SPEC-v0.2-batch-add.md  SPEC-v0.3-unified-cli.md  SPEC-v0.4-saved-views.md  SPEC-v0.8-aggregate-table-by-type.md  SPEC.md  pyproject.toml  zt
data/: academia.txt  peso.txt
docs/vhs/: quick-start.tape  same-day-aggregation.tape  saved-views.tape  views-workflow.tape
examples/: gym.txt  weight.txt
tests/: test_cli.py
zentracker/: __init__.py  __main__.py  cli.py  metrics.py  storage.py
