[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zentracker"
version = "0.1.0"
description = "CLI local-first para registrar metricas pessoais em arquivos texto."
requires-python = ">=3.11"

[project.scripts]
zt = "zentracker.cli:main"
zentracker = "zentracker.cli:main"

[tool.setuptools.packages.find]
include = ["zentracker*"]
